--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -1,77 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_marginTop="10dp">
-    <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@android:color/black" />
-    <LinearLayout
-        android:orientation="horizontal"
+
+<androidx.cardview.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/match_list_item_CardView_matchHolder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="5">
+        android:layout_margin="8dp"
+        android:orientation="vertical"
+        app:cardCornerRadius="4dp"
+        app:cardPreventCornerOverlap="true"
+        app:cardUseCompatPadding="true">
 
-        <TextView
-            android:id="@+id/team1"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:fontFamily="sans-serif-condensed"
-            android:padding="10dp"
-            android:textSize="16sp"
-
-        />
-        <TextView
-                android:id="@+id/score1"
-                android:layout_height="wrap_content"
+    <RelativeLayout android:layout_width="match_parent"
+                    android:gravity="center_horizontal"
+                    android:layout_height="match_parent">
+        <LinearLayout
                 android:layout_width="match_parent"
-                android:fontFamily="sans-serif-condensed"
-                android:padding="10dp"
-                android:textSize="16sp"
-                android:layout_weight="4"
-        />
-        <ImageView
-                android:id="@+id/win1"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/ic_star_24dp"
-                android:visibility="invisible"
-        />
-    </LinearLayout>
-    <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:weightSum="5">
-
-        <TextView
-                android:id="@+id/team2"
                 android:layout_height="wrap_content"
+                android:id="@+id/date"
+                android:orientation="horizontal">
+            <TextView
+                    android:id="@+id/fecha"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sampleDate"
+                    android:layout_weight="1"
+                    android:textSize="@dimen/small_text"
+            android:gravity="center_horizontal"/>
+            <TextView
+                    android:id="@+id/hora"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sampleTime"
+                    android:layout_weight="1"
+                    android:textSize="@dimen/small_text"
+            android:gravity="center_horizontal"/>
+        </LinearLayout>
+        <LinearLayout
+                android:id="@+id/resultado"
                 android:layout_width="match_parent"
-                android:layout_weight="1"
-                android:fontFamily="sans-serif-condensed"
-                android:padding="10dp"
-                android:textSize="16sp"
-        />
-        <TextView
-                android:id="@+id/score2"
                 android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:fontFamily="sans-serif-condensed"
-                android:padding="10dp"
-                android:textSize="16sp"
-                android:layout_weight="4"
-        />
-        <ImageView
-                android:id="@+id/win2"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/ic_star_24dp"
-                android:visibility="invisible"
-        />
-    </LinearLayout>
+                android:layout_below="@id/date"
+                android:textSize="@dimen/small_text"
+                android:orientation="horizontal"
+                android:layout_margin="@dimen/margin">
+            <TextView
+                    android:id="@+id/equipo1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sampleName1"
+                    android:textSize="@dimen/small_text"
+                    android:layout_weight="1"
+                    android:gravity="start"
+                    android:layout_margin="@dimen/margin"/>
+            <TextView
+                    android:id="@+id/puntos1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/small_text"
+                    android:text="@string/sampleResult"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal"
+                    android:layout_margin="@dimen/margin"/>
+            <TextView
+                    android:id="@+id/puntos2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/small_text"
+                    android:text="@string/sampleResult"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal"
+                    android:layout_margin="@dimen/margin"/>
+            <TextView
+                    android:id="@+id/equipo2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sampleName1"
+                    android:textSize="@dimen/small_text"
+                    android:layout_weight="1"
+                    android:gravity="end"
+                    android:layout_margin="@dimen/margin"/>
 
-</LinearLayout>
+        </LinearLayout>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/gano"
+                android:textSize="@dimen/small_text"
+                android:layout_margin="@dimen/margin"
+                android:gravity="center_horizontal"
+                android:layout_below="@id/resultado"/>
+    </RelativeLayout>
+
+
+
+</androidx.cardview.widget.CardView>
