--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -76,7 +76,7 @@
                     android:id="@+id/equipo2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/sampleName1"
+                    android:text="@string/sampleName2"
                     android:textSize="@dimen/small_text"
                     android:layout_weight="1"
                     android:gravity="end"
@@ -84,6 +84,7 @@
 
         </LinearLayout>
         <TextView
+                android:id="@+id/ganador"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/gano"
