--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="small_text">16dp</dimen>
+    <dimen name="small_text">20dp</dimen>
+    <dimen name="big_text">30dp</dimen>
     <dimen name="margin">10dp</dimen>
 </resources>
