--- a/app/src/main/res/layout/activity_new_partido.xml
+++ b/app/src/main/res/layout/activity_new_partido.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+    <data>
+        <variable name="puntos" type="com.example.pdm_parcial1.PartidoViewModel"/>
+    </data>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical" android:layout_width="match_parent"
               android:layout_height="match_parent">
@@ -123,3 +127,4 @@
             android:layout_marginTop="@dimen/margin"/>
 
 </LinearLayout>
+</layout>
