--- a/app/src/main/res/layout/activity_new_partido.xml
+++ b/app/src/main/res/layout/activity_new_partido.xml
@@ -34,30 +34,33 @@
                     android:layout_marginTop="@dimen/margin">
                     <Button
                             android:id="@+id/uno"
+                            android:fontFamily="sans-serif-condensed-light"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textSize="@dimen/big_text"
                             android:text="@string/uno"
                             android:layout_weight="1"
-                            android:background="@color/orange"
+                            style="@style/Base.Widget.AppCompat.Button.Colored"
                             android:layout_marginRight="@dimen/margin"/>
                     <Button
                             android:id="@+id/dos"
+                            android:fontFamily="sans-serif-condensed-light"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textSize="@dimen/big_text"
                             android:text="@string/dos"
                             android:layout_weight="1"
-                            android:background="@color/orange"
+                            style="@style/Base.Widget.AppCompat.Button.Colored"
                             android:layout_marginRight="@dimen/margin"/>
                     <Button
                             android:id="@+id/tres"
+                            android:fontFamily="sans-serif-condensed-light"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textSize="@dimen/big_text"
                             android:text="@string/tres"
                             android:layout_weight="1"
-                            android:background="@color/orange"/>
+                            style="@style/Base.Widget.AppCompat.Button.Colored"/>
             </LinearLayout>
 
     </LinearLayout>
@@ -88,30 +91,33 @@
                 android:layout_marginTop="@dimen/margin">
             <Button
                     android:id="@+id/uno2"
+                    android:fontFamily="sans-serif-condensed-light"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/big_text"
                     android:text="@string/uno"
                     android:layout_weight="1"
-                    android:background="@color/orange"
+                    style="@style/Base.Widget.AppCompat.Button.Colored"
                     android:layout_marginRight="@dimen/margin"/>
             <Button
                     android:id="@+id/dos2"
+                    android:fontFamily="sans-serif-condensed-light"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/big_text"
                     android:text="@string/dos"
                     android:layout_weight="1"
-                    android:background="@color/orange"
+                    style="@style/Base.Widget.AppCompat.Button.Colored"
                     android:layout_marginRight="@dimen/margin"/>
             <Button
                     android:id="@+id/tres2"
+                    android:fontFamily="sans-serif-condensed-light"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/big_text"
                     android:text="@string/tres"
                     android:layout_weight="1"
-                    android:background="@color/orange"/>
+                    style="@style/Base.Widget.AppCompat.Button.Colored"/>
         </LinearLayout>
 
     </LinearLayout>
@@ -123,7 +129,7 @@
             android:layout_width="match_parent"
             android:textSize="@dimen/big_text"
             android:text="Finalizar"
-            android:fontFamily="sans-serif-condensed"
+            android:fontFamily="sans-serif-condensed-light"
             android:layout_marginTop="@dimen/margin"/>
 
 </LinearLayout>
